--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,6 +7,10 @@ jobs:
   run-github-actions
     runs-on: ubuntu-latest
     steps:
+      - name: List files
+        run: |
+          pwd
+          ls
       - name: Simle JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
