--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,14 +4,13 @@ name: Actions Workflow
 on: [push]
 
 jobs:
-  run-github-actions
+  run-github-actions:
     runs-on: ubuntu-latest
     steps:
       - name: List files
         run: |
           pwd
           ls
-          whoami
       - name: Simle JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
