--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,7 +21,6 @@ jobs:
         run: |
           pwd
           ls -a
-          aws ecs run-task --cluster newcls --task-definition nginxtaskdef:1 --count 1 --launch-type FARGATE --network-configuration "awsvpcConfiguration={subnets=[subnet-0d5de275],securityGroups=[sg-08495eda3967b5855]}"
       - name: Simle JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
@@ -29,3 +28,10 @@ jobs:
           who-to-greet: John
       - name: Log Greeting time
         run: echo "${{ steps.greet.outputs.time }}"
+      - name: Update task status ECS
+        uses: docker://amazon/aws-cli:2.0.7
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        with:
+          args: aws ecs run-task --cluster newcls --task-definition nginxtaskdef:1 --count 1 --launch-type FARGATE --network-configuration "awsvpcConfiguration={subnets=[subnet-0d5de275],securityGroups=[sg-08495eda3967b5855]}"
