--- a/.github/workflows/ecstask.yml
+++ b/.github/workflows/ecstask.yml
@@ -1,16 +1,17 @@
-name: Run ECS Task
-
-on:
-  push
+name: Update esc task count
+on: [push]
 jobs:
-  listS3:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macOS-10.14, windows-2016, ubuntu-18.04]
+  sync:
+    runs-on: ubuntu-latest
     steps:
-      - uses: chrislennon/action-aws-cli@v1.1
-      # All commands after this point have access to the AWS CLI
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install awscli
       - run: aws ecs run-task --cluster newcls --task-definition nginxtaskdef --count 1 --launch-type FARGATE --network-configuration "awsvpcConfiguration={subnets=[subnet-0d5de275],securityGroups=[sg-08495eda3967b5855]}"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
